[1035]Technical Dept issues
Bug: 1035
Change-Id: Id2a6d96a2204135ff98a0a8bfa6fd836e3728d30
Signed-off-by: Faycal Abka <abka.faycal@gmail.com>